--- a/src/main/webapp/WEB-INF/components/lunaHistory/lunaTestHistoryC/lunaTestHistoryC.cmp
+++ b/src/main/webapp/WEB-INF/components/lunaHistory/lunaTestHistoryC/lunaTestHistoryC.cmp
@@ -49,7 +49,7 @@
     <thead>
     <th>Test Class</th>
     <th>Test Name</th>
-    <!--<th>Last Run Status</th>-->
+    <th>Age</th>
     <th>Luna History</th>
     </thead>
     <tbody>
@@ -61,9 +61,9 @@
 	        <td>
 	        	{!t.name}
 	        </td>
-	        <!--<td class="{!t.status}">
-	        	{!t.status}
-	        </td>-->
+	        <td>
+	        	{!t.age}
+	        </td>
 	        <td >
 		    	<ui:outputUrl alt="Open Luna History" title="Open Luna History" value="{!t.url}" iconClass="jsConsoleIcon" target="_blank"/>
 		    </td>
